Panorama: bugfix

Extra test for an empty string.

BUG: 283509